Parser no longer adds an extra space to the end of lines.

--- a/main.css
+++ b/main.css
@@ -169,6 +169,9 @@ input{
 	.letterCell{
 		font-size: 8vw;
 	}
+    button{
+        font-size: 6vw;
+    }
 }
 
 @keyframes shake{
